versioned_docs/version-3.3/api-libf3d/structf3d_1_1options_1_1ui.md
# Structure f3d::options::ui

![][C++]
![][public]

**Definition**: `options.h` (line 344)





## Inner classes

* [f3d::options::ui::backdrop](structf3d_1_1options_1_1ui_1_1backdrop.md)
* [f3d::options::ui::drop\_zone](structf3d_1_1options_1_1ui_1_1drop__zone.md)

## Members

* [animation\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ae59abab94c46ea815619719508e4cc45)
* [axis](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1abfd8854499551ce7c0c540d78df2aff1)
* [backdrop](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a22decd9179c26365b4bd3a362f082ffa)
* [cheatsheet](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a1cde66196d0a9ce0226138000375fe34)
* [console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a6f1714ac73921c439ec565d81a37ab6f)
* [drop\_zone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a3d7eb05cdc0b47b25ebe4c064ed193fc)
* [dropzone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a9fbb41f4b580d17168ec5de11684b8a7)
* [dropzone\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a83d3e3bca58cdf8b05ebf40d6720db91)
* [filename](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a7048320d9bb390ae7835661897e95dd1)
* [filename\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a0e50b1165e587143d700f0c2d63ad418)
* [font\_file](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1aa3b74802f8b6f49f192b5e10bdf0e57d)
* [fps](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a32b32dd1964f7aef02551de40fd7f621)
* [loader\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a57c3b693a4c40a2b53c2bbd78a424590)
* [metadata](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a15cbd89b8b286034c91edf77f6278a7e)
* [minimal\_console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1af69b0a70c39649a14b49b06a3c429f37)
* [scalar\_bar](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a00a0273d310e85dd94b8e974affc6b44)
* [scale](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a240d1a8507160aa83f10508efa911f56)

## Public attributes

### Variable animation\_progress {/* #structf3d_1_1options_1_1ui_1ae59abab94c46ea815619719508e4cc45 */}

![][public]

**Definition**: `options.h` (line 345)


```cpp
bool f3d::options::ui::animation_progress = false
```








**Type**: bool



### Variable axis {/* #structf3d_1_1options_1_1ui_1abfd8854499551ce7c0c540d78df2aff1 */}

![][public]

**Definition**: `options.h` (line 346)


```cpp
bool f3d::options::ui::axis = false
```








**Type**: bool



### Variable backdrop {/* #structf3d_1_1options_1_1ui_1a22decd9179c26365b4bd3a362f082ffa */}

![][public]

**Definition**: `options.h` (line 349)


```cpp
struct f3d::options::ui::backdrop f3d::options::ui::backdrop
```








**Type**: struct f3d::options::ui::backdrop



### Variable cheatsheet {/* #structf3d_1_1options_1_1ui_1a1cde66196d0a9ce0226138000375fe34 */}

![][public]

**Definition**: `options.h` (line 351)


```cpp
bool f3d::options::ui::cheatsheet = false
```








**Type**: bool



### Variable console {/* #structf3d_1_1options_1_1ui_1a6f1714ac73921c439ec565d81a37ab6f */}

![][public]

**Definition**: `options.h` (line 352)


```cpp
bool f3d::options::ui::console = false
```








**Type**: bool



### Variable drop\_zone {/* #structf3d_1_1options_1_1ui_1a3d7eb05cdc0b47b25ebe4c064ed193fc */}

![][public]

**Definition**: `options.h` (line 358)


```cpp
struct f3d::options::ui::drop_zone f3d::options::ui::drop_zone
```








**Type**: struct f3d::options::ui::drop_zone



### Variable dropzone {/* #structf3d_1_1options_1_1ui_1a9fbb41f4b580d17168ec5de11684b8a7 */}

![][public]

**Definition**: `options.h` (line 360)


```cpp
bool f3d::options::ui::dropzone = false
```








**Type**: bool



### Variable dropzone\_info {/* #structf3d_1_1options_1_1ui_1a83d3e3bca58cdf8b05ebf40d6720db91 */}

![][public]

**Definition**: `options.h` (line 361)


```cpp
std::string f3d::options::ui::dropzone_info = ""
```








**Type**: std::string



### Variable filename {/* #structf3d_1_1options_1_1ui_1a7048320d9bb390ae7835661897e95dd1 */}

![][public]

**Definition**: `options.h` (line 362)


```cpp
bool f3d::options::ui::filename = false
```








**Type**: bool



### Variable filename\_info {/* #structf3d_1_1options_1_1ui_1a0e50b1165e587143d700f0c2d63ad418 */}

![][public]

**Definition**: `options.h` (line 363)


```cpp
std::string f3d::options::ui::filename_info = ""
```








**Type**: std::string



### Variable font\_file {/* #structf3d_1_1options_1_1ui_1aa3b74802f8b6f49f192b5e10bdf0e57d */}

![][public]

**Definition**: `options.h` (line 364)


```cpp
std::optional<std::filesystem::path> f3d::options::ui::font_file
```








**Type**: std::optional< std::filesystem::path >



### Variable fps {/* #structf3d_1_1options_1_1ui_1a32b32dd1964f7aef02551de40fd7f621 */}

![][public]

**Definition**: `options.h` (line 365)


```cpp
bool f3d::options::ui::fps = false
```








**Type**: bool



### Variable loader\_progress {/* #structf3d_1_1options_1_1ui_1a57c3b693a4c40a2b53c2bbd78a424590 */}

![][public]

**Definition**: `options.h` (line 366)


```cpp
bool f3d::options::ui::loader_progress = false
```








**Type**: bool



### Variable metadata {/* #structf3d_1_1options_1_1ui_1a15cbd89b8b286034c91edf77f6278a7e */}

![][public]

**Definition**: `options.h` (line 367)


```cpp
bool f3d::options::ui::metadata = false
```








**Type**: bool



### Variable minimal\_console {/* #structf3d_1_1options_1_1ui_1af69b0a70c39649a14b49b06a3c429f37 */}

![][public]

**Definition**: `options.h` (line 368)


```cpp
bool f3d::options::ui::minimal_console = false
```








**Type**: bool



### Variable scalar\_bar {/* #structf3d_1_1options_1_1ui_1a00a0273d310e85dd94b8e974affc6b44 */}

![][public]

**Definition**: `options.h` (line 369)


```cpp
bool f3d::options::ui::scalar_bar = false
```








**Type**: bool



### Variable scale {/* #structf3d_1_1options_1_1ui_1a240d1a8507160aa83f10508efa911f56 */}

![][public]

**Definition**: `options.h` (line 370)


```cpp
f3d::ratio_t f3d::options::ui::scale = [f3d::ratio\_t](classf3d_1_1ratio__t.md){1.0}
```








**Type**: [f3d::ratio\_t](classf3d_1_1ratio__t.md)



[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)
[private]: https://img.shields.io/badge/-private-red (private)