versioned_docs/version-3.4/api-libf3d/structf3d_1_1options_1_1ui.md
# Structure f3d::options::ui {/* #structf3d_1_1options_1_1ui */}

![][C++]
![][public]

**Definition**: `options.h` (line 350)





## Inner classes

* [f3d::options::ui::backdrop](structf3d_1_1options_1_1ui_1_1backdrop.md)
* [f3d::options::ui::drop\_zone](structf3d_1_1options_1_1ui_1_1drop__zone.md)

## Members

* [animation\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ae59abab94c46ea815619719508e4cc45)
* [animation\_progress\_color](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1abf4a5fc40533edd4aab39f9aafa102b9)
* [axis](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1abfd8854499551ce7c0c540d78df2aff1)
* [backdrop](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a22decd9179c26365b4bd3a362f082ffa)
* [cheatsheet](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a1cde66196d0a9ce0226138000375fe34)
* [console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a6f1714ac73921c439ec565d81a37ab6f)
* [drop\_zone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a3d7eb05cdc0b47b25ebe4c064ed193fc)
* [dropzone](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a9fbb41f4b580d17168ec5de11684b8a7)
* [dropzone\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a83d3e3bca58cdf8b05ebf40d6720db91)
* [filename](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a7048320d9bb390ae7835661897e95dd1)
* [filename\_info](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a0e50b1165e587143d700f0c2d63ad418)
* [font\_file](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1aa3b74802f8b6f49f192b5e10bdf0e57d)
* [fps](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a32b32dd1964f7aef02551de40fd7f621)
* [hdri\_filename](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a0be6a75fb4cb26a99b3d2de679428a68)
* [loader\_progress](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a57c3b693a4c40a2b53c2bbd78a424590)
* [loader\_progress\_color](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ada8e682055fabcd818b2f82cb094c119)
* [metadata](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a15cbd89b8b286034c91edf77f6278a7e)
* [minimal\_console](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1af69b0a70c39649a14b49b06a3c429f37)
* [scalar\_bar](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a00a0273d310e85dd94b8e974affc6b44)
* [scale](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1a240d1a8507160aa83f10508efa911f56)
* [x\_color](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1aa8d952112cf3576c45e68b3826d04eda)
* [y\_color](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ad39fabdba87a573799118efc53c49038)
* [z\_color](structf3d_1_1options_1_1ui.md#structf3d_1_1options_1_1ui_1ab72517b9b3a0ef4bb5ff08442207bec0)

## Public attributes

### Variable animation\_progress {/* #structf3d_1_1options_1_1ui_1ae59abab94c46ea815619719508e4cc45 */}

![][public]

**Definition**: `options.h` (line 351)


```cpp
bool f3d::options::ui::animation_progress = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::animation_progress"}]}`
*/}

### Variable animation\_progress\_color {/* #structf3d_1_1options_1_1ui_1abf4a5fc40533edd4aab39f9aafa102b9 */}

![][public]

**Definition**: `options.h` (line 352)


```cpp
std::optional<f3d::color_t> f3d::options::ui::animation_progress_color
```








**Type**: std::optional< [f3d::color\_t](classf3d_1_1color__t.md) >

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::animation_progress_color"}]}`
*/}

### Variable axis {/* #structf3d_1_1options_1_1ui_1abfd8854499551ce7c0c540d78df2aff1 */}

![][public]

**Definition**: `options.h` (line 353)


```cpp
bool f3d::options::ui::axis = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::axis"}]}`
*/}

### Variable backdrop {/* #structf3d_1_1options_1_1ui_1a22decd9179c26365b4bd3a362f082ffa */}

![][public]

**Definition**: `options.h` (line 356)


```cpp
struct f3d::options::ui::backdrop f3d::options::ui::backdrop
```








**Type**: struct f3d::options::ui::backdrop

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::backdrop"}]}`
*/}

### Variable cheatsheet {/* #structf3d_1_1options_1_1ui_1a1cde66196d0a9ce0226138000375fe34 */}

![][public]

**Definition**: `options.h` (line 358)


```cpp
bool f3d::options::ui::cheatsheet = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::cheatsheet"}]}`
*/}

### Variable console {/* #structf3d_1_1options_1_1ui_1a6f1714ac73921c439ec565d81a37ab6f */}

![][public]

**Definition**: `options.h` (line 359)


```cpp
bool f3d::options::ui::console = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::console"}]}`
*/}

### Variable drop\_zone {/* #structf3d_1_1options_1_1ui_1a3d7eb05cdc0b47b25ebe4c064ed193fc */}

![][public]

**Definition**: `options.h` (line 365)


```cpp
struct f3d::options::ui::drop_zone f3d::options::ui::drop_zone
```








**Type**: struct f3d::options::ui::drop_zone

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::drop_zone"}]}`
*/}

### Variable dropzone {/* #structf3d_1_1options_1_1ui_1a9fbb41f4b580d17168ec5de11684b8a7 */}

![][public]

**Definition**: `options.h` (line 367)


```cpp
bool f3d::options::ui::dropzone = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::dropzone"}]}`
*/}

### Variable dropzone\_info {/* #structf3d_1_1options_1_1ui_1a83d3e3bca58cdf8b05ebf40d6720db91 */}

![][public]

**Definition**: `options.h` (line 368)


```cpp
std::string f3d::options::ui::dropzone_info = ""
```








**Type**: std::string

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::dropzone_info"}]}`
*/}

### Variable filename {/* #structf3d_1_1options_1_1ui_1a7048320d9bb390ae7835661897e95dd1 */}

![][public]

**Definition**: `options.h` (line 369)


```cpp
bool f3d::options::ui::filename = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::filename"}]}`
*/}

### Variable filename\_info {/* #structf3d_1_1options_1_1ui_1a0e50b1165e587143d700f0c2d63ad418 */}

![][public]

**Definition**: `options.h` (line 370)


```cpp
std::string f3d::options::ui::filename_info = ""
```








**Type**: std::string

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::filename_info"}]}`
*/}

### Variable font\_file {/* #structf3d_1_1options_1_1ui_1aa3b74802f8b6f49f192b5e10bdf0e57d */}

![][public]

**Definition**: `options.h` (line 371)


```cpp
std::optional<std::filesystem::path> f3d::options::ui::font_file
```








**Type**: std::optional< std::filesystem::path >

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::font_file"}]}`
*/}

### Variable fps {/* #structf3d_1_1options_1_1ui_1a32b32dd1964f7aef02551de40fd7f621 */}

![][public]

**Definition**: `options.h` (line 372)


```cpp
bool f3d::options::ui::fps = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::fps"}]}`
*/}

### Variable hdri\_filename {/* #structf3d_1_1options_1_1ui_1a0be6a75fb4cb26a99b3d2de679428a68 */}

![][public]

**Definition**: `options.h` (line 373)


```cpp
bool f3d::options::ui::hdri_filename = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::hdri_filename"}]}`
*/}

### Variable loader\_progress {/* #structf3d_1_1options_1_1ui_1a57c3b693a4c40a2b53c2bbd78a424590 */}

![][public]

**Definition**: `options.h` (line 374)


```cpp
bool f3d::options::ui::loader_progress = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::loader_progress"}]}`
*/}

### Variable loader\_progress\_color {/* #structf3d_1_1options_1_1ui_1ada8e682055fabcd818b2f82cb094c119 */}

![][public]

**Definition**: `options.h` (line 375)


```cpp
std::optional<f3d::color_t> f3d::options::ui::loader_progress_color
```








**Type**: std::optional< [f3d::color\_t](classf3d_1_1color__t.md) >

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::loader_progress_color"}]}`
*/}

### Variable metadata {/* #structf3d_1_1options_1_1ui_1a15cbd89b8b286034c91edf77f6278a7e */}

![][public]

**Definition**: `options.h` (line 376)


```cpp
bool f3d::options::ui::metadata = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::metadata"}]}`
*/}

### Variable minimal\_console {/* #structf3d_1_1options_1_1ui_1af69b0a70c39649a14b49b06a3c429f37 */}

![][public]

**Definition**: `options.h` (line 377)


```cpp
bool f3d::options::ui::minimal_console = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::minimal_console"}]}`
*/}

### Variable scalar\_bar {/* #structf3d_1_1options_1_1ui_1a00a0273d310e85dd94b8e974affc6b44 */}

![][public]

**Definition**: `options.h` (line 378)


```cpp
bool f3d::options::ui::scalar_bar = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::scalar_bar"}]}`
*/}

### Variable scale {/* #structf3d_1_1options_1_1ui_1a240d1a8507160aa83f10508efa911f56 */}

![][public]

**Definition**: `options.h` (line 379)


```cpp
f3d::ratio_t f3d::options::ui::scale = [f3d::ratio\_t](classf3d_1_1ratio__t.md){1.0}
```








**Type**: [f3d::ratio\_t](classf3d_1_1ratio__t.md)

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::scale"}]}`
*/}

### Variable x\_color {/* #structf3d_1_1options_1_1ui_1aa8d952112cf3576c45e68b3826d04eda */}

![][public]

**Definition**: `options.h` (line 380)


```cpp
f3d::color_t f3d::options::ui::x_color = [f3d::color\_t](classf3d_1_1color__t.md){0.9764705882352941,0.2627450980392157,0.023529411764705882}
```








**Type**: [f3d::color\_t](classf3d_1_1color__t.md)

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::x_color"}]}`
*/}

### Variable y\_color {/* #structf3d_1_1options_1_1ui_1ad39fabdba87a573799118efc53c49038 */}

![][public]

**Definition**: `options.h` (line 381)


```cpp
f3d::color_t f3d::options::ui::y_color = [f3d::color\_t](classf3d_1_1color__t.md){0.47843137254901963,1.0,0.47843137254901963}
```








**Type**: [f3d::color\_t](classf3d_1_1color__t.md)

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::y_color"}]}`
*/}

### Variable z\_color {/* #structf3d_1_1options_1_1ui_1ab72517b9b3a0ef4bb5ff08442207bec0 */}

![][public]

**Definition**: `options.h` (line 382)


```cpp
f3d::color_t f3d::options::ui::z_color = [f3d::color\_t](classf3d_1_1color__t.md){0.47058823529411764,0.5450980392156862,1.0}
```








**Type**: [f3d::color\_t](classf3d_1_1color__t.md)

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::ui::z_color"}]}`
*/}

[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)
[private]: https://img.shields.io/badge/-private-red (private)